Update QCad to version 3.19.1.0

At the same time, fix a symbol conflict by using zlib from pkgsrc
rather than a private copy

ChangeLog:

3.19.1 (2017/11/11):

    Linux, macOS:
        Remove unnecessary libraries
    Bug fixes:
        FS#1652 - Insert file as block: block attributes not on correct block
        FS#1653 - Dimension font configuration only loaded if drawing contains dimension entity
        FS#1655 - File > Print Preview: cannot adjust page preferences for model space
        FS#1656 - Dimension size scale wrong in viewports
        FS#1657 - Edit > Drawing Preferences > Printing > Page: no effect in model space
        FS#1658 - Crash when switching to layout block (32bit Linux, Qt4)

3.19.0 (2017/11/08):

    Modify > Explode:
        Make sure draw order of exploded polyline segments matches order of original polyline
        (draw order based on draw order property and entity ID)
    File > New:
        Use default layer color and lineweight for layer 0
    Load TTF fonts in "fonts" directory
    Add osifont
    Performance improvement for drawings with many blocks
    Bug fixes:
        FS#1574 - Layer > Remove: deleting sublayer switches to layer 0

3.18.1 (2017/10/05):

    Leaders:
        Add scale property (scale of arrow head)
    Edit > Application Preferences > Graphics View > Appearance > Prevent white on white / black on black display:
        Add preference to only apply to model space
    Bug fixes:
        FS#1617 - Edit > Convert Drawing Unit: Views in view list not converted
        FS#1634 - View > Screen-based Linetypes: arc rendering quality
        FS#1636 - Options toolbar: wrong icon size
        FS#1639 - Layer > Hide all Layers: cannot turn individual layer back on
        FS#1640 - Modify > Offset: Tolerance issue when clipping offset curves

3.18.0 (2017/09/22)

    Remember maximized status of window between sessions
    Translations:
        Updated Japanese user interface translation
    Bug fixes:
        FS#1614 - View > Selection Filter: no choices for linetype property
        FS#1615 - Decimal point of dimensions shown as '?', preferences page throws exception
        FS#1616 - Edit > Convert Drawing Unit: leader arrow switched off
        FS#1618 - Modify > Auto Trim: fails when extending (depending on clicked position)
        FS#1619 - Context menu: relocating start point of selected polyline does not terminate
        FS#1622 - X Scale Property lost for Simple Texts and Attributes
        FS#1630 - File > SVG Export: polylines with arc segments with large radii imprecise
        FS#1631 - dxflib: wrong definition of DL_POLYLINE3D flag

3.17.3 (2017/06/30)

    Modify:
        Isometric Projection:
            Add alternative projection types:
                Dimetric
                Cabinet 30°
        Scale:
            Scale internal text formatting when scaling texts
        Scale Text Heights:
            Scale heights of selected texts (without changing the position)
    Bug fixes:
        FS#1605 - Edit > Paste: Empty layers created when pasting to current layer
        FS#1606 - Selecting 'Draw Order' halts system temporary
        FS#1609 - Edit > Drawing Preferences: dimension size scale cannot be changed to 1

3.17.2 (2017/06/27)

    Modify > Isometric Projection:
        Add alternative projection types:
            Planometric
            Cabinet
            Cavalier
    Bug fixes:
        FS#1572 - Dimension font not set to "Standard" when importing through dxflib
        FS#1593 - CAM > CAM Export: ZH in header always yields default value "100"
        FS#1595 - LWPOLYLINE expors Z values for vertices
        FS#1597 - Edit > Convert Drawing Unit: dimension scale override set for all dimensions
        FS#1600 - File > Save As: Only partial information shown for available filters

3.17.1 (2017/05/22)

    Bug fixes:
        FS#1581 - View > Selection Filter: no inputs for property Linetype Scale
        FS#1582 - Layer > Show all Layers / Hide all Layers: unexpected outcome when frozen column not shown
        FS#1584 - Modify > Divide: dividing polyline at node can lead to zero length segment

3.17.0 (2017/05/18)

    Edit > Application Preferences:
        Graphics View > Behaviour > Highlight entity within range
            Preference to enable / disable entity highlighting
    Library Browser:
        Remember and restore last used directory
    Themes:
        Allow themes to override tool icons
    Platforms:
        macOS:
            Rollback to Qt 5.6.2
             Fix performance regression (QTBUG-59701)
            Fix pinch gesture zoom in / out using trackpad
    Bug fixes:
        FS#1566 - Block > Attributes > Synchronize Attributes: deleted block attributes re-appear
        FS#1569 - File > Print Preview: changing offset in drawing preferences has no immediate effect
        FS#1579 - Edit > Paste: rotation leads to wrong position of block references if drawing units differ