cad/qcad/patches/patch-src_3rdparty_opennurbs_opennurbs_opennurbs.pro
@@ -1,11 +1,13 @@
-$NetBSD: patch-src_3rdparty_opennurbs_opennurbs_opennurbs.pro,v 1.1 2016/08/30 10:56:04 plunky Exp $
+$NetBSD: patch-src_3rdparty_opennurbs_opennurbs_opennurbs.pro,v 1.2 2017/12/18 21:21:44 plunky Exp $
 
 fix build for pkgsrc, by allowing qmake to link binaries in situ
 and create an install target
 
+don't provide own zlib
+
 --- src/3rdparty/opennurbs/opennurbs/opennurbs.pro.orig	2016-07-01 07:13:14.000000000 +0000
 +++ src/3rdparty/opennurbs/opennurbs/opennurbs.pro
-@@ -218,14 +218,9 @@ HEADERS += \
+@@ -218,14 +218,8 @@ HEADERS += \
 
  TARGET = opennurbs
  TEMPLATE = lib
@@ -18,7 +20,6 @@ and create an install target
 -}
 -LIBS += -lzlib
 +CONFIG += plugin
-+LIBS += -L../zlib -lzlib
 +INSTALLS += target
  win32 {
      #DEFINES += ON_DLL_EXPORTS ON_COMPILING_OPENNURBS NDEBUG
